--- a/css/reset.css
+++ b/css/reset.css
@@ -1,3 +1,11 @@
+@charset "UTF-8";
+* {
+	font-family: 'Helvetica', sans-serif;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	-webkit-touch-callout: none;
+	-webkit-text-size-adjust: none;
+}
 html,
 body,
 div,
@@ -22,51 +30,97 @@ li,
 form,
 label,
 caption {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    background: transparent;
-    list-style: none;
-    font-size: 100%;
-    font-style: normal;
-    font-weight: normal;
-	vertical-align: baseline;
-	touch-action:manipulation;
-}
-html,body{
-    width: 100%;
-	height: 100%;
-	font-size: 14px;
-}
-body{
-	line-height: 1;
-}
-ol , ul{
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	background: transparent;
 	list-style: none;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 100%;
+	vertical-align: baseline;
 }
-table{
+html,
+body {
+	width: 100%;
+	height: 100%;
+	color: #1D1A31;
+	touch-action: manipulation;
+	font-size: 15px;
+}
+*:hover,
+*:focus,
+*:active {
+	outline: 0;
+	-moz-outline: none;
+	-webkit-tap-highlight-color: transparent;
+}
+
+a,
+a:hover {
+	text-decoration: none;
+	color: inherit;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+	-webkit-appearance: none;
+	appearance: none;
+}
+
+input[type=number] {
+	-moz-appearance: textfield;
+}
+
+input[type="password"]::-webkit-textfield-decoration-container {
+	visibility: hidden;
+}
+
+input,
+button,
+select,
+textarea {
+	font-family: 'Helvetica', sans-serif;
+	padding: 0;
+	border: 0;
+	background-color: transparent;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	-ms-appearance: none;
+	appearance: none;
+	resize: none;
+	font-size: 15px;
+}
+
+input::-ms-clear,
+input::-ms-reveal,
+select::-ms-expand{
+	display: none;
+}
+.nofloat:after {
+	content: '';
+	display: table;
+	clear: both;
+}
+
+table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-blockquote, q{
-	quotes:none;
+
+tt {
+	font-family: 'Helvetica', sans-serif;
 }
-blockquote:before, blockquote:after,
-q:before , q:after{
-	content:'';
-	content:none;
+
+img{
+	width: 100%;
+	vertical-align: middle;
 }
-input,button,select{
-	padding: 0;
-	border: none;
-	appearance: none;
-	resize: none;
-	outline:none;
-}
-*{
-	box-sizing: border-box;
-}
+
+
 @media only screen and (min-device-width: 1025px) {
 	::-webkit-scrollbar {
 		width: 6px;
