--- a/style/css/all.css
+++ b/style/css/all.css
@@ -154,7 +154,6 @@
 
 .banner .banner_info img {
   width: 40%;
-  vertical-align: middle;
 }
 
 .banner .banner_txt {
@@ -241,10 +240,6 @@
   margin-bottom: 40px;
   -webkit-transition-duration: .3s;
           transition-duration: .3s;
-}
-
-.flyer .flyer_group img {
-  vertical-align: middle;
 }
 
 .flyer .flyer_item {
@@ -352,5 +347,353 @@
   top: 0;
   bottom: 0;
   margin: auto;
+}
+
+.leaderboard {
+  width: 100%;
+  background: url("../images/leaderboard/bg_leaderboard_l.png") no-repeat center left/contain, url("../images/leaderboard/bg_leaderboard_r.png") no-repeat center right/contain;
+}
+
+.leaderboard .leaderboard_box {
+  width: 100%;
+  max-width: 1430px;
+  overflow: hidden;
+  margin: auto;
+  padding-bottom: 40px;
+}
+
+.leaderboard .leaderboard_box .pic {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  padding: 40px 0;
+}
+
+.leaderboard .leaderboard_box li {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+  width: 226px;
+  margin: 0 30px;
+}
+
+.leaderboard .dots {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.leaderboard .dots li {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  border: 2px solid #FFB057;
+  margin: 0 5px;
+}
+
+.leaderboard .dots .on {
+  background: #FFB057;
+}
+
+.school {
+  width: 100%;
+  background: url("../images/school/bg_school.png") no-repeat right bottom/contain;
+}
+
+.school .school_name {
+  margin-bottom: 40px;
+}
+
+.school .school_name ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.school .school_name li {
+  position: relative;
+  padding: 2px 80px 2px 40px;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.school .school_name li::after {
+  content: '\25BA';
+  position: absolute;
+  left: 80%;
+  width: 18px;
+  height: 18px;
+  font-size: 16px;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
+  color: #FFB057;
+}
+
+.school .school_name li + li {
+  border-left: 2px solid #C4C4C4;
+}
+
+.school .school_int {
+  position: relative;
+}
+
+.school .school_pic {
+  position: relative;
+  padding-bottom: calc(75% * 0.56);
+}
+
+.school .school_pic img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: auto;
+  height: 100%;
+}
+
+.school .school_txt {
+  position: absolute;
+  max-width: 535px;
+  right: 5%;
+  bottom: -5%;
+}
+
+.school .school_txt .title {
+  color: #fff;
+  height: 148px;
+  background: rgba(239, 126, 0, 0.7);
+  display: block;
+  padding: 0 40px;
+}
+
+.school .school_txt h1 {
+  display: block;
+  width: 100%;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 85px;
+}
+
+.school .school_txt h2 {
+  display: block;
+  width: 100%;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 65px;
+  text-align: right;
+}
+
+.school .school_info {
+  background: rgba(255, 255, 255, 0.9);
+  padding: 16px 38px 38px;
+}
+
+.school .school_info li + li {
+  margin-top: 25px;
+}
+
+.school .school_info li:last-child {
+  text-align: right;
+}
+
+.video {
+  width: 100%;
+  background: url("../images/video/bg_video.png") no-repeat center/cover;
+}
+
+.video .video_box {
+  width: 100%;
+  max-width: 990px;
+  margin: 0 auto 40px;
+}
+
+.video .video_play {
+  width: 100%;
+  height: 557px;
+  background: #eee;
+}
+
+.video .video_title {
+  text-align: center;
+  margin-bottom: 25px;
+}
+
+.video .video_menu {
+  position: relative;
+  width: 100%;
+  max-width: 1110px;
+  height: 138px;
+  background: #1E8E57;
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 65px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.video .video_menu_box li + li {
+  margin-left: 15px;
+}
+
+.news {
+  background: url("../images/bg_news_l.png") no-repeat left top/contain, url("../images/bg_news_r.png") no-repeat right bottom/contain;
+}
+
+.news .news_box {
+  width: 100%;
+  max-width: 976px;
+  margin: 0 auto 40px;
+}
+
+.news .news_box li + li {
+  margin-top: 20px;
+}
+
+.news .news_date {
+  color: #EF7E00;
+  font-weight: bold;
+  font-size: 24px;
+  margin-right: 20px;
+}
+
+.news .news_info {
+  border-bottom: 1px solid #000;
+}
+
+.about {
+  background: url("../images/bg_about.png") no-repeat center/cover;
+}
+
+.about .about_txt {
+  position: relative;
+  width: 100%;
+  max-width: 795px;
+  margin: auto;
+  background: rgba(255, 255, 255, 0.6);
+}
+
+.about .about_txt::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: url("../images/about_people.png") no-repeat center/contain;
+  left: 80%;
+  bottom: 0;
+}
+
+.about .about_txt li {
+  line-height: 40px;
+}
+
+.about .about_blod {
+  font-size: 28px;
+  font-weight: 700;
+}
+
+.about .text_indent {
+  text-indent: 45px;
+}
+
+.edu_link {
+  background: #E7E7E7;
+}
+
+.edu_link .edu_group {
+  width: 100%;
+  max-width: 1110px;
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.edu_link .edu_group li {
+  width: calc(100% / 3 - 30px);
+  height: 85px;
+  margin-bottom: 30px;
+  background: #fff;
+  text-align: center;
+  line-height: 85px;
+  border-radius: 10px;
+}
+
+.footer {
+  width: 100%;
+  background: linear-gradient(106.56deg, #7D4A17 0%, #C68236 100%);
+  padding: 40px 80px;
+  color: #fff;
+  font-size: 16px;
+}
+
+.footer .info_box {
+  padding-top: 0;
+}
+
+.footer .school_group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.footer .school_group ul {
+  width: 45%;
+}
+
+.footer .school_group li {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer .school_group li + li {
+  margin-top: 15px;
+}
+
+.footer .school_group .name {
+  display: block;
+  width: 40%;
+  text-align: left;
+}
+
+.footer .school_group .phone {
+  display: block;
+  width: 20%;
+}
+
+.footer .school_group .address {
+  display: block;
+  width: 40%;
+}
+
+.footer .copyright {
+  margin-top: 35px;
+  text-align: center;
 }
 /*# sourceMappingURL=all.css.map */
